--- a/index.html
+++ b/index.html
@@ -21,129 +21,14 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
-        <title>Encuesta Mascotas</title>   
+        <title>Encuesta Blue Buffalo</title>   
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="asset/css/bootstrap.min.css">
         <!-- JQuery Export datatable csv,excel pdf -->
         <link rel="stylesheet" href="asset/css/jquery.dataTables.min.css">
         <link rel="stylesheet" href="asset/css/buttons.dataTables.min.css">
-        <style>
-            * {
-                box-sizing: border-box;
-            }
-
-            body {
-                background: #fff0cb;
-            }
-
-            #regForm {
-                font-family: Raleway;
-                background-color: rgb(4, 43, 78) !important;
-                margin: 3em auto;
-                padding: 40px;
-                /* width: 70%; */
-                min-width: 300px;
-                min-height: 600px;
-                color: #fff0cb;
-            }
-
-            h1 {
-                text-align: center;  
-            }
-
-            input {
-                padding: 10px;
-                width: 100%;
-                font-size: 17px;
-                font-family: Raleway;
-                border: 1px solid #aaaaaa;
-            }
-
-            /* Mark input boxes that gets an error on validation: */
-            input.invalid {
-                background-color: #ffdddd !important;
-            }
-            select.invalid {
-                background-color: #ffdddd !important;
-            }
-            radio.invalid {
-                background-color: #ffdddd !important;
-            }
-
-            /* Hide all steps by default: */
-            .tab {
-                display: none;
-            }
-
-            button {
-                background-color: #fff0cb;
-                color: #042b4e;
-                border: none;
-                padding: 10px 20px;
-                font-size: 17px;
-                font-family: Raleway;
-                cursor: pointer;
-            }
-
-            button:hover {
-                opacity: 0.8;
-            }
-
-            #prevBtn {
-                background-color: #bbbbbb;
-            }
-
-            /* Make circles that indicate the steps of the form: */
-            .step {
-                height: 15px;
-                width: 15px;
-                margin: 0 2px;
-                background-color: #bbbbbb;
-                border: none;  
-                border-radius: 50%;
-                display: inline-block;
-                opacity: 0.5;
-            }
-
-            .step.active {
-                opacity: 1;
-            }
-
-            /* Mark the steps that are finished and valid: */
-            .step.finish {
-                background-color: #0086ff;
-            }
-
-            select {
-                padding: 10px;
-                width: 100%;
-                font-size: 17px;
-                font-family: Raleway;
-                border: 1px solid #aaaaaa;
-            }
-            .center {
-                margin: auto;
-                width: 60%;
-                padding: 10px;
-            }
-
-            table {
-                border-collapse: collapse;
-                border-spacing: 0;
-                width: 100%;
-                border: 1px solid #ddd;
-            }
-
-            th, td {
-                text-align: left;
-                padding: 8px;
-            }
-
-            tr:nth-child(even){background-color: #f2f2f2}
-            #logo{
-                background-color: rgb(255, 240, 203) !important;
-            }
-        </style>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="asset/css/mascota.css"
     </head>
     <body>
         <div class="center" id="logo">
@@ -158,21 +43,31 @@
                     <br>
                     <div class="row">
                         <div class="col">
-                            <a href="perro.html"><button type="button" class="btn-block">Perro</button></a>
+                            <a href="wolf.html"><button type="button" class="btn-block"><img src="asset/img/dog.png"></button></a>
                         </div>
                         <div class="col">
-                            <a href="gato.html"><button type="button" class="btn-block">Gato</button></a>
+                            <a href="gato.html"><button type="button" class="btn-block"><img src="asset/img/cat.png"></button></a>
                         </div>
                     </div><br><br>
-                    <div class="row">
+                    <div class="col">
                         <div class="col">
                             <!-- Button to Open the Modal -->
-                            <button type="button" class="btn-block" data-toggle="modal" data-target="#myModal">
-                                <span class="glyphicon glyphicon-edit"></span>
+                            <button type="button" class="btn-block btn-lg" data-toggle="modal" data-target="#myModal">
+                                <i class="fa fa-address-card"></i>
                                 Datos del encuestador
                             </button>
                         </div>
+                    </div><br>
+                    <div class="col">
+                        <div class="col">
+                            <!-- Button to Open the Modal -->
+                            <button type="button" class="btn-block btn-lg" data-toggle="modal" data-target="#respuestas" id="modalResp">
+                                <i class="fa fa-edit"></i>
+                                Ver respuestas
+                            </button>
+                        </div>
                     </div>
+
                 </div>                
             </form>
         </div>
@@ -216,8 +111,46 @@
                 </div>
             </div>
         </div>
-        <!-- Data encuestador -->
+        <!-- Data Respuestas -->
+        <!-- The Modal -->
+        <div class="modal fade" id="respuestas">
+            <div class="modal-dialog">
+                <div class="modal-content">
 
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Respuestas:</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <form id="resultados_de_la_encuesta" action="http://eloquent.com.mx/PanelBlueBuffalo/recibe_respuestas.php" method="POST">
+                        <!-- Modal body -->
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <textarea class="form-control" rows="10" id="jsonRespuestas" name="jsonRespuestas"></textarea>
+                            </div>
+                        </div>
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
+                            <div class="row">
+                                <div class="col">
+                                    <button type="button" class="btn btn-default" id="clear" onclick="return confirm('¿Esta seguro de Borrar Buffer? Las repsuestas no enviadas se eliminaran.')">
+                                        <i class="fa fa-fire"></i>
+                                        Borrar Buffer
+                                    </button>
+                                </div>
+                                <div class="col">
+                                    <button type="submit" class="btn btn-default">
+                                        <i class="fa fa-cloud-upload"></i>
+                                        Enviar respuestas
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!-- Data respuestas -->
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="asset/js/jquery-3.2.1.slim.min.js"></script>
@@ -237,8 +170,38 @@
         <script type="text/javascript" src="js/validator.min.js"></script>
         <script type="text/javascript" src="js/regForm.js"></script>
         <script>
+            //imprimo en el div #result el nombre del encuestador
             document.getElementById("result").innerHTML = localStorage.getItem("nombre_enc");
 
+            /**
+             * cuando le dan clic a la ventana modal de erespuesta setea en el
+             * text area #jsonRespuestas el json de las respuestas
+             */
+            $("#modalResp").click(function () {
+                /**
+                 * si localStorage de respuesta JSON != null
+                 */
+                if (localStorage.getItem("json")) {
+                    //Concatenamos estructura de cabeceras JSON
+                    var str = '{"data": [' + localStorage.getItem("json") + ']}';
+                    //Reemplazamos null
+                    var res = str.replace("[null{", "[{");
+                    //reemplazo la ultmima coma del JSON
+                    var res2 = res.replace(",]}", "]}");
+                    //setep el resultado en el textArea #jsonRespuestas
+                    $("#jsonRespuestas").val(res2);
+                }
+            });
+            /**
+             * cuando dan clic en clear borra el local storage
+             */
+            $("#clear").click(function () {
+                localStorage.clear();
+            });
+            /**
+             * Cuando guardan datos del form #datos_encuestador
+             * 
+             */
             $("#datos_encuestador").validator().on("submit", function (event) {
                 if (event.isDefaultPrevented()) {
                     // handle the invalid form...
@@ -251,15 +214,15 @@
                     var app_enc = $("#app_enc").val();
 
                     // Check browser support
+                    //Guardamos en localStorage el nombre del encuestador
                     if (typeof (Storage) !== "undefined") {
                         // Store
                         localStorage.setItem("nombre_enc", nombre_enc + " " + app_enc);
                         // Retrieve
                         document.getElementById("result").innerHTML = localStorage.getItem("nombre_enc");
                     } else {
-                        document.getElementById("result").innerHTML = "Sorry, your browser does not support Web Storage...";
+                        document.getElementById("result").innerHTML = "Sorry, your Abroid does not support Web Storage...";
                     }
-
                     console.log("Tu nombre es: " + nombre_enc + " " + app_enc);
                 }
             });
